first commit after controllers, without inventory