@@ -2,9 +2,7 @@ package models.initializer;
 
 import models.Position;
 import models.building.*;
-import models.character.NPC.NPC;
-import models.character.NPC.NPCQuest;
-import models.character.NPC.NPCType;
+import models.character.NPC.*;
 import models.character.player.Player;
 import models.enums.Direction;
 
@@ -136,56 +134,75 @@ public class VillageInitializer {
         Room5 room5 = new Room5(new Position(FIFTH_ROOM_TP.x(), FIFTH_ROOM_BR.y()));
     }
 
-    private static void InitializeSebastian() {
+    private static void InitializeSebastian(List<Player> players) {
         NPC sebastian = new NPC(NPCType.SEBASTIAN, room1,
                 new Position((FIRST_ROOM_TP.x() + FIRST_ROOM_BR.x()) / 2, FIRST_ROOM_BR.y() + 2),
-                Direction.DOWN);
+                Direction.DOWN, List.of(new NPCQuest(NPCQuestType.SEBASTIAN_1),
+                new NPCQuest(NPCQuestType.SEBASTIAN_2), new NPCQuest(NPCQuestType.SEBASTIAN_3)));
     }
-    private static void InitializeAbigail() {
+    private static void InitializeAbigail(List<Player> players) {
         NPC abigail = new NPC(NPCType.ABIGAIL, room2,
                 new Position(SECOND_ROOM_BR.x() + 2, (SECOND_ROOM_TP.y() + SECOND_ROOM_BR.y()) / 2),
-                Direction.RIGHT);
+                Direction.RIGHT, List.of(new NPCQuest(NPCQuestType.ABIGAIL_1),
+                new NPCQuest(NPCQuestType.ABIGAIL_2), new NPCQuest(NPCQuestType.ABIGAIL_3)));
     }
-    private static void InitializeHarvey() {
+    private static void InitializeHarvey(List<Player> players) {
         NPC harvey = new NPC(NPCType.HARVEY, room3,
                 new Position((THIRD_ROOM_TP.x() + THIRD_ROOM_BR.x()) / 2, THIRD_ROOM_BR.x() - 2),
-                Direction.UP);
+                Direction.UP, List.of(new NPCQuest(NPCQuestType.HARVEY_1),
+                new NPCQuest(NPCQuestType.HARVEY_2), new NPCQuest(NPCQuestType.HARVEY_3)));
     }
-    private static void InitializeLeah() {
+    private static void InitializeLeah(List<Player> players) {
         NPC leah = new NPC(NPCType.LEAH, room4,
                 new Position((FOURTH_ROOM_TP.x() + FOURTH_ROOM_BR.x()) / 2, FOURTH_ROOM_BR.y() - 2),
-                Direction.UP);
+                Direction.UP, List.of(new NPCQuest(NPCQuestType.LEAH_1),
+                new NPCQuest(NPCQuestType.LEAH_2), new NPCQuest(NPCQuestType.LEAH_3)));
     }
-    private static void InitializeRobin() {
+    private static void InitializeRobin(List<Player> players) {
         NPC robin = new NPC(NPCType.ROBIN, room5,
                 new Position(FIFTH_ROOM_TP.x() - 2, (FIFTH_ROOM_TP.y() + FIRST_ROOM_BR.y()) / 2),
-                Direction.LEFT);
+                Direction.LEFT, List.of(new NPCQuest(NPCQuestType.ROBIN_1),
+                new NPCQuest(NPCQuestType.ROBIN_2), new NPCQuest(NPCQuestType.ROBIN_3)));
     }
 
     private static void InitializeFriendship(List<Player> players) {
         for (Player player : players) {
-//            FriendshipNetwork.establishFriendship(player, robin, 0);
-//            FriendshipNetwork.establishFriendship(player, leah, 0);
-//            FriendshipNetwork.establishFriendship(player, sebastian, 0);
-//            FriendshipNetwork.establishFriendship(player, abigail, 0);
-//            FriendshipNetwork.establishFriendship(player, harvey, 0);
-
             robin.addPlayerToTalk(player);
             leah.addPlayerToTalk(player);
             sebastian.addPlayerToTalk(player);
             abigail.addPlayerToTalk(player);
             harvey.addPlayerToTalk(player);
+
+
+            robin.addFriendshipAndLevel(player);
+            leah.addFriendshipAndLevel(player);
+            sebastian.addFriendshipAndLevel(player);
+            abigail.addFriendshipAndLevel(player);
+            harvey.addFriendshipAndLevel(player);
         }
     }
 
-    private static void initializeQuests() {
-        List<NPCQuest> quests = Arrays.asList(NPCQuest.values());
-        int count = 1;
-        for (NPC npc : List.of(sebastian, abigail, harvey, leah, robin)) {
-            for (int i = count; i < count + 3; i++) {
-                npc.addQuest(i % 3, quests.get(i));
-            }
-            count += 3;
-        }
+//    private static void initializeQuests() {
+//        List<NPCQuestType> quests = Arrays.asList(NPCQuestType.values());
+//        int count = 1;
+//        for (NPC npc : List.of(sebastian, abigail, harvey, leah, robin)) {
+//            for (int i = count; i < count + 3; i++) {
+//                npc.addQuest(i % 3, quests.get(i));
+//            }
+//            count += 3;
+//        }
+//    }
+
+    public static NPCVillage initializeVillage(List<Player> players) {
+        initializeTiles();
+        InitializeBuilding();
+        InitializeSebastian(players);
+        InitializeHarvey(players);
+        InitializeLeah(players);
+        InitializeAbigail(players);
+        InitializeRobin(players);
+//        initializeQuests();
+        InitializeFriendship(players);
+        return new NPCVillage(tiles, List.of(sebastian, abigail, harvey, leah, robin), room1, room2, room3, room4, room5);
     }
 }
